# internal/app/model/input/Organization.go
@@ -1,0 +1,9 @@
+package input
+
+type OrganizationRegister struct {
+	Name       string   `json:"name" example:"ЖКХ"`
+	Inn        string   `json:"inn"`
+	Address    string   `json:"address"`
+	Phone      string   `json:"phone"`
+	Categories *[]int32 `json:"category_ids"`
+}
