# internal/app/model/response/User.go
@@ -1,7 +1,8 @@
 package response
 
 type User struct {
-	Id    int32   `json:"id" example:"1"`
-	Email *string `json:"email,omitempty" example:"test@gmail.com"`
-	Name  *string `json:"name" example:"Иванов Иван Иванович"`
+	Id             int32   `json:"id" example:"1"`
+	Email          *string `json:"email,omitempty" example:"test@gmail.com"`
+	Name           *string `json:"name" example:"Иванов Иван Иванович"`
+	OrganizationId *int32  `json:"organization_id,omitempty" example:"1"`
 }
